logs/lablackey.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/lablackey'...
Listing './lib/python3.5/site-packages/lablackey/db'...
Compiling './lib/python3.5/site-packages/lablackey/mail.py'...
***   File "./lib/python3.5/site-packages/lablackey/mail.py", line 73
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/lablackey/management'...
Listing './lib/python3.5/site-packages/lablackey/management/commands'...
Compiling './lib/python3.5/site-packages/lablackey/management/commands/crawl.py'...
***   File "./lib/python3.5/site-packages/lablackey/management/commands/crawl.py", line 20
    print r.status_code,"\t",url
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/lablackey/middleware.py'...
***   File "./lib/python3.5/site-packages/lablackey/middleware.py", line 63
    print sql_log
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/lablackey/static'...
Listing './lib/python3.5/site-packages/lablackey/static/admin'...
Listing './lib/python3.5/site-packages/lablackey/static/admin/img'...
Listing './lib/python3.5/site-packages/lablackey/static/suit'...
Listing './lib/python3.5/site-packages/lablackey/templates'...
Listing './lib/python3.5/site-packages/lablackey/templates/admin'...
Listing './lib/python3.5/site-packages/lablackey/templates/registration'...
Compiling './lib/python3.5/site-packages/lablackey/utils.py'...
***   File "./lib/python3.5/site-packages/lablackey/utils.py", line 40
    print form.errors
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/lablackey-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
